// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange Job Requests should match snapshot 1`] = `
<pf-exchange-job-requests
  exchangeId={[Function Number]}
  exchangeJobRequestsGrid$={[Function Store]}
  exchangeJobRequestsLoading$={[Function Store]}
  exchangeJobRequestsLoadingError$={[Function Store]}
  route={[Function Object]}
  store={[Function Store]}
>
  <div
    class="d-flex flex-column h-100"
  >
    <div
      class="d-flex justify-content-between align-items-center"
    >
      <pf-manage-exchange-section-header />
    </div>
    <div
      class="d-flex h-100"
    >
      <pf-async-container
        class="flex-grow-1"
      >
        <kendo-grid>
          <kendo-grid-column
            field="JobTitle"
            title="Job Title"
          />
          <kendo-grid-column
            field="JobFamily"
            title="Job Family"
          />
          <kendo-grid-column
            field="JobLevel"
            title="Job Level"
          />
          <kendo-grid-column
            field="RequestUser"
            title="Request User"
          />
          <kendo-grid-column
            field="RequestCompany"
            title="Request Company"
          />
          <kendo-grid-column
            field="RequestDate"
            title="Request Date"
          >
            
          </kendo-grid-column>
          <kendo-grid-column
            class="text-center"
            field="IsPayfactorsJob"
            title="Request Type"
            width="104"
          >
            
          </kendo-grid-column>
        </kendo-grid>
      </pf-async-container>
    </div>
  </div>
</pf-exchange-job-requests>
`;

exports[`New Company Exchange Invitations should match snapshot 1`] = `
<pf-exchange-job-requests
  exchangeId={[Function Number]}
  exchangeJobRequestsGrid$={[Function Store]}
  exchangeJobRequestsLoading$={[Function Store]}
  exchangeJobRequestsLoadingError$={[Function Store]}
  route={[Function Object]}
  store={[Function Store]}
>
  <div
    class="d-flex flex-column h-100"
  >
    <div
      class="d-flex justify-content-between align-items-center"
    >
      <pf-manage-exchange-section-header />
    </div>
    <div
      class="d-flex h-100"
    >
      <pf-async-container
        class="flex-grow-1"
      >
        <kendo-grid>
          <kendo-grid-column
            field="JobTitle"
            title="Job Title"
          />
          <kendo-grid-column
            field="JobFamily"
            title="Job Family"
          />
          <kendo-grid-column
            field="JobLevel"
            title="Job Level"
          />
          <kendo-grid-column
            field="RequestUser"
            title="Request User"
          />
          <kendo-grid-column
            field="RequestCompany"
            title="Request Company"
          />
          <kendo-grid-column
            field="RequestDate"
            title="Request Date"
          >
            
          </kendo-grid-column>
          <kendo-grid-column
            class="text-center"
            field="IsPayfactorsJob"
            title="Request Type"
            width="102"
          >
            
          </kendo-grid-column>
        </kendo-grid>
      </pf-async-container>
    </div>
  </div>
</pf-exchange-job-requests>
`;
